The patient list was made to be link and the pages were restricted to be opened on a single page.

--- a/Medical App Design Project/css/doc1.css
+++ b/Medical App Design Project/css/doc1.css
@@ -97,3 +97,6 @@ background: #43ACFF;
   margin-left: 9.5rem;
   margin-right: 11.3rem;
 }
+.documentation-details .morfix .blueline, .documentation-details .dropped .blueline, .documentation-details .last .blueline {
+  background: #33CDBA;
+}
