--- a/Medical App Design Project/css/style.css
+++ b/Medical App Design Project/css/style.css
@@ -192,6 +192,7 @@ font-family: 'Roboto', sans-serif;
 .j-jane .display-picture{
   padding-right: 1.2rem;
   height: 4vw;
+  cursor: pointer;
 }
 .jane-circle-up, .gas42 {
   display: flex;
